Add final reslease notes for V5.3
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-3.md
+++ b/site/snippets/release-notes/5-3.md
@@ -1,9 +1,9 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-## Release 5.3 (April 2025)
+## Release 5.3 (May 2025)
 
-_**These are DRAFT release notes.  The notes will be updated until & when 5.3 is released**_
+Release 5.3 provides significant enhancements to the mermaid visualization introduced in release 5.2.  In addition, it has two new view services: [Solution Architect OMVS](/services/omvs/solution-architect/overview) and [Data Designer OMVS](/services/omvs/data-desginer/overview) designed to support Dr.Egeria.
 
 ??? functional "Open Metadata Types"
     * The [ExternalId](/types/0017-External-Identifiers) entity has a new attribute called *externalInstanceTypeName* to allow the capture of the type name of an instance from a third party system.
@@ -31,14 +31,17 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is
 ??? functional "Updated View Service: Project Manager OMVS"
     The Project Manager OMVS now has a new call to retrieve a project with its dependent projects, resources and assigned people.  This is supplied as nested JSON and also as a mermaid graph.
 
+??? functional "Updated View Service: Collection Manager OMVS"
+    The Collection Manager OMVS now has a new call to retrieve a collection and all of its nested members.  This is supplied as JSON and also as a mermaid graph.
+
 ??? functional "New View Service: Solution Architect OMVS"
     [Solution Architect OMVS](/services/omvs/solution-architect/overview) supports the management and querying of [Information Supply Chains](/concepts/information-supply-chain) and [Solution Components](/concepts/solution-component).
 
 ??? functional "New View Service: Data Designer OMVS"
-    [Data Designer OMVS](/services/omvs/data-designer/overview) supports the management and querying of [Data Structures](/concepts/data-structure), [Data Fields](/concepts/data-field) and [data classes](/concepts/data-class).
+    [Data Designer OMVS](/services/omvs/data-designer/overview) supports the management and querying of [Data Structures](/concepts/data-structure), [Data Fields](/concepts/data-field) and [Data Classes](/concepts/data-class).
 
 ??? functional "New View Service: Classification Explorer OMVS"
-    [Classification Explorer OMVS](/services/omvs/classification-explorer/overview) supports enables the caller to issue queries to understand how metadata elements are linked and classified.
+    [Classification Explorer OMVS](/services/omvs/classification-explorer/overview) supports queries that show how metadata elements are linked and classified.  This function was extracted from [Glossary Browser OMVS](/services/omvs/glossary-browser/overview) and [Feedback Manager OMVS](/services/feedback-manager/overview).
 
 ??? info "Increased resilience in error handling"
 
