Add new types and Time Keeper OMVS
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-3.md
+++ b/site/snippets/release-notes/5-3.md
@@ -44,6 +44,7 @@ Release 5.3 provides significant enhancements to the mermaid visualization intro
     [Classification Explorer OMVS](/services/omvs/classification-explorer/overview) supports queries that show how metadata elements are linked and classified.  This function was extracted from [Glossary Browser OMVS](/services/omvs/glossary-browser/overview) and [Feedback Manager OMVS](/services/feedback-manager/overview).
 
 ??? info "Increased resilience in error handling"
+    For security reasons, Egeria should not flow exception objects as responses to REST API calls.  When exceptions occur, details of the exception are set into the response object and this information is used to create a new exception in the client side.  This prevents internal implementation details of the servers from being exposed to external callers through the stack trace.  The code that handles this exception management was only catching Exception objects.  This meant that "Null Pointer Exceptions (NPEs)" and other Java Errors were being sent.  This code has been changed to catch "Throwable".   Typically, Java application code does not catch this severity level of error.  However, it was felt that the small amount of processing that occurs under these conditions was worth it to protect the server's security.
 
 ??? danger "Rename of Open Connector Framework Wrapper Beans"
     In order to distinguish the bean names used in the Open Connector Framework (OCF) from the beans used in the Open Metadata Framework (OMF), the Bean Wrapper classes of the OCF have been renamed as follows:
@@ -58,6 +59,7 @@ Release 5.3 provides significant enhancements to the mermaid visualization intro
 
 ??? danger "Reversal of open metadata relationship ends"
     The following relationships have had their ends reversed (ie what was end 1 is now end 2 and vice versa).  This is to ensure the graph visualizations makes sense and to ensure that operations that use the anchor support (such as delete element) are able to reliably navigate to dependent elements by travelling from end1 to end2.  The update is permitted because these relationships are not known to be in use.
+
        * AssetLocation
        * TeamLeadership
        * TeamMembership
@@ -74,6 +76,7 @@ Release 5.3 provides significant enhancements to the mermaid visualization intro
        * DesignModelElementsInScope
     
     The following relationships have been deprecated and replaced.  The replacements have swapped ends for the same reasons as above.  However, the deprecated relationships are currently in use and the new types allow elements using these relationships to still operate correctly, giving time to migrate them to the new relationships.
+
        * ConnectionToAsset replaced by AssetConnection
        * ConnectionEndpoint replaced by ConnectToEndpoint
 
