--- a/site/snippets/release-notes/5-4.md
+++ b/site/snippets/release-notes/5-4.md
@@ -6,10 +6,15 @@
 _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is released**_
 
 ??? functional "Open Metadata Types"
-    TBD
+    * The [GovernanceResponsibilityAssignment](/types/4/0445-Governance-Roles) relationship now connects to an [Actor](/types/1/0110-Actors) at end 2.
+    * There is a new relationship called [ImplementationResource](/types/7/0737-Solution-Implementation) to separate components available for the implementation team from the complete implementations identified by the *ImplementedBy* relationship.
+    * Relationship *GovernanceDefinitionScope* has been renamed to [ScopedBy](/types/1/0120-Assognment-Scopes) to clarify its use.
 
 ??? functional "New View Service: Governance Officer OMVS"
     [Governance Officer OMVS](/services/omvs/governance-officer/overview) supports the maintenance of the metadata for a governance domain.
+
+??? functional "New View Service: Time Keeper OMVS"
+    [Time Keeper OMVS](/services/omvs/time-keeper/overview) supports the maintenance and queries of [context events](/concepts/context-event).
 
 ??? functional "New View Service: Notification Manager OMVS"
     [Notification Manager OMVS](/services/omvs/notification-manager/overview) supports the management and querying of [ToDos](/concepts/to-do) and [IncidentReports](/concepts/incident-report).
