Add updates for digital products
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-4.md
+++ b/site/snippets/release-notes/5-4.md
@@ -9,9 +9,17 @@ _**These are DRAFT release notes.  The notes will be updated until & when 5.3 is
     * The [GovernanceResponsibilityAssignment](/types/4/0445-Governance-Roles) relationship now connects to an [Actor](/types/1/0110-Actors) at end 2.
     * There is a new relationship called [ImplementationResource](/types/7/0737-Solution-Implementation) to separate components available for the implementation team from the complete implementations identified by the *ImplementedBy* relationship.
     * Relationship *GovernanceDefinitionScope* has been renamed to [ScopedBy](/types/1/0120-Assognment-Scopes) to clarify its use.
+    * Relationships *GovernanceProcessImplementation* and *GovernanceRuleImplementation* have been replaced by [ImplementedBy](/types/1/0120-Assognment-Scopes) to create better consistency in the way that design/requirements are linked to implementations.
+    * Entity *InformationSupplyChainSegment* has been removed and, instead, [InformationSupplyChains](/type/7/0720-Information-Supply-Chains) can now be nested.  This creates a simpler, but more flexible model, particularly for large organizations that may wish for more than one level of nesting in their information supply chains.
+    * Entity *DigitalService* and relationships *DigitalServiceProduct* and *DigitalServiceOperator* have been removed and, instead, [DigitalProduct](/type/7/0710-Digital-Products) becomes an entity that inherits from *Collection*.  It can now be nested using the renamed *DigitalProductDependency* (renamed from DigitalServiceDependency). Relationship *DigitalServiceManagement* becomes *DigitalProductManagement* and relationship *DigitalServiceDesign* becomes *SolutionDesign*.
+    * Relationship *OrganizationalCapability* has been renamed to [BusinessCapabilityTeam](/types/4/0440-Organizational-Controls).
+    * The *AssetOrigin* classification has been replaced by [DigitalResourceOrigin](/types/4/0440-Organizational-Controls) which can be linked to any element that described digital resources, rather than just assets.
 
 ??? functional "New View Service: Governance Officer OMVS"
     [Governance Officer OMVS](/services/omvs/governance-officer/overview) supports the maintenance of the metadata for a governance domain.
+
+??? functional "New View Service: Actor Manager OMVS"
+    [Actor Manager OMVS](/services/omvs/actor-manager/overview) supports the maintenance of actor profiles, actor roles and user identities.
 
 ??? functional "New View Service: Time Keeper OMVS"
     [Time Keeper OMVS](/services/omvs/time-keeper/overview) supports the maintenance and queries of [context events](/concepts/context-event).
