Simplification of type system
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/5-0.md
+++ b/site/snippets/release-notes/5-0.md
@@ -17,9 +17,9 @@ Release 5.0 is a major functional release focused on usability, both from the po
     * The [*Anchors*](/types/0/0010-Base-Model) classification is able to store the type of the anchor as well as its GUID.
     * A new classification called [*RootCollection*](/types/0/0021-Collections) can be added to a collection entity to indicate that it is the root of collection hierarchy.
     * The [*Collection*](/types/0/0021-Collections) entity has a new attribute called *collectionType* that can be used to identify the concept that the collection represents.
-    * A new supertype called [*Action*](/types/1/0137-Actions) has been added to the [*ToDo*](/types/1/0137-Actions) and [*EngineAction*](/types/4/0463-Engine-Actions).
-    * The [*ActionSponsor*](/types/1/0137-Actions) relationship now links an [*Action*](/types/1/0137-Actions) to a [*Referenceable*](/types/0/0010-Base-Model).
-    * The [*ToDo*](/types/1/0137-Actions) entity has a new attribute called *lastReviewTime*.
+    * A new supertype called [*Action*](/types/1/0013-Actions) has been added to the [*ToDo*](/types/1/0135-Actions-For-People) and [*EngineAction*](/types/4/0463-Engine-Actions).
+    * The [*ActionSponsor*](/types/1/0013-Actions) relationship now links an [*Action*](/types/1/0013-Actions) to a [*Referenceable*](/types/0/0010-Base-Model).
+    * The [*Process*](/types/1/0010-Base-Model) entity has a new attribute called *lastReviewTime*.
     * The [*EngineAction*](/types/4/0463-Engine-Actions) entity has new attributes called *requesterUserId* and *requestedStartDate*.
     * A new classification called [*PersonalProject*](/types/1/0130-Projects) can be added to a project entity to indicate that it is an informal project that have been created by an individual to help them organize their work.
     * A new classification called [*StudyProject*](/types/1/0130-Projects) can be added to a project entity to indicate that it is a focused analysis of a topic, person, object or situation.
