--- a/site/snippets/release-notes/2-9.md
+++ b/site/snippets/release-notes/2-9.md
@@ -17,7 +17,7 @@ Details of these and other changes are in the sections that follow.
 * The **UserProfileManager**, **UserAccessDirectory** and **MasterDataManager** classification for **Referenceables** has been added
 to model [0056 resource Managers](/types/0/0056-Resource-Managers).
 * A new relationship called **ActionTarget** to link a **To Do** to the elements that need work has been added
-to model [0137 Actions for People](/types/1/0137-Actions).
+to model [0135 Actions for People](/types/1/0135-Actions-For-People).
 * A new attribute called **filterExpression** has been added to the **Port** entity in
 model [0217 Ports](/types/2/0217-Ports).
 * A new classification called **PrimaryCategory** has been added to
