--- a/site/snippets/release-notes/3-13.md
+++ b/site/snippets/release-notes/3-13.md
@@ -8,8 +8,8 @@
     * A new attribute called *versionIdentifier* has been added to the [*Asset*](/types/0/0010-Base-Model) entity type to support assets that are periodically released.
     * A new attribute called *languageCode* has been added to the [*TranslationDetail*](/types/0/0022-Translations) entity type to support ISO-639 language codes.
     * The *Actor* entity type has been added to model [0110 Actors](/types/1/0110-Actors).  This acts as a common super type for [*ActorProfile*](/types/1/0110-Actors), [*UserIdentifier*](/types/1/0110-Actors) and [PersonRole](/types/1/0112-People) to create a common root for different representations of actors.
-    * A new attribute *toDoType* has been added to the [*ToDo*](/types/1/0137-Actions) entity type.
-    * Relationship type [*ActionAssignment*](/types/1/0137-Actions) can now link [*Actors*](/types/1/0110-Actors) rather than just [*PersonRoles*](/types/1/0112-People) to a [ToDo](/types/1/0137-Actions).
+    * A new attribute *toDoType* has been added to the [*ToDo*](/types/1/0135-Actions-For-People) entity type.
+    * Relationship type [*ActionAssignment*](/types/1/0135-Actions-For-People) can now link [*Actors*](/types/1/0110-Actors) rather than just [*PersonRoles*](/types/1/0112-People) to a [ToDo](/types/1/0135-Actions-For-People).
     * The *ParquetFile* entity type has been added to model [0220 Files and Folders](/types/2/0220-Files-and-Folders).
     * A new attribute *pathName* has been added to the [*FileFolder*](/types/2/0220-Files-and-Folders) entity type.
     * New attributes *pathName* and *fileName* have been added to the [*DataFile*](/types/2/0220-Files-and-Folders) entity type.
