Add support for TabularDataSet types
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/4-0.md
+++ b/site/snippets/release-notes/4-0.md
@@ -58,7 +58,7 @@
     * New attributes have been added to the [*CollectionMembership*](/types/0/0021-Collections) relationship type to allow the confidence and provenance of a member's inclusion in the collection to be documented.  This is used where collections are being generated from automated processes.
     * New attributes have been added to the [*ActionTarget*](/types/1/0013-Actions) relationship type to allow the status of each element to be acted upon to be managed.  This is important where the actor has to perform work on multiple elements since it allows progress to be recorded.
     * A new DataSet entity type called [*DataFileCollection*](/types/2/0220-Files-and-Folders) has been added to capture an asset that is a collection of files, not necessarily co-located.
-    * A new DataSet entity type called [*TableDataSet*](/types/2/0224-Databases) has been added to capture an asset that is a database table.  This is useful for database tables in a large database that contains useful reference values.
+    * A new DataSet entity type called *TableDataSet* has been added to capture an asset that is a database table.  This is useful for database tables in a large database that contains useful reference values.
     * A new Asset entity type called [*DeployedReportType*](/types/2/0239-Reports) has been added to capture an asset that is a report template.
     * New attributes have been added to the [*GovernanceActionProcessStepExecutor*](/types/4/0462-Governance-Action-Processes) relationship type to allow the filtering and mapping of request parameters and action targets before calling a governance action.
     * A new attribute called *incidentClassifierCategory* has been added to the [*IncidentClassifierSet*](/types/4/0470-Incident-Reporting) classification type to allow different names classifiers to be defined.
