Updates to API list
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/snippets/release-notes/2-11.md
+++ b/site/snippets/release-notes/2-11.md
@@ -129,7 +129,7 @@
         - `owner` - now captured in the [Ownership](/types/4/0445-Governance-Roles) classification
         - `ownerType` - also captured in the Ownership classification
         - `zoneMembership` - now captured in the [ZoneMembership](/types/4/0424-Governance-Zones) classification
-        - `latestChange` - now captures]d in the [LatestChange](/types/0/0011-Managing-Referenceables) classification
+        - `latestChange` - now captures]d in the LatestChange classification
 
         See new type description in model [0010](/types/0/0010-Base-Model).
 
