--- a/site/snippets/release-notes/5-0.md
+++ b/site/snippets/release-notes/5-0.md
@@ -33,7 +33,7 @@ Release 5.0 is a major functional release focused on usability, both from the po
     * The [*DataFile*](/types/2/0220-Files-and-Folders) type has a attribute called *fileExtension*.  New types that inherit from *DataFile* have been defined for a wide range of file types: [*SpreadsheetFile*](/types/2/0220-Files-and-Folders), [*XMLFile*](/types/2/0220-Files-and-Folders), [*AudioFile*](/types/2/0221-Document-Stores), [*VideoFile*](/types/2/0221-Document-Stores), [*3DImageFile*](/types/2/0221-Document-Stores), [*RasterFile*](/types/2/0221-Document-Stores), [*VectorFile*](/types/2/0221-Document-Stores), [*SourceCodeFile*](/types/2/0280-Software-Development-Assets), [*ExecutableFile*](/types/2/0280-Software-Development-Assets), [*ScriptFile*](/types/2/0280-Software-Development-Assets), [*BuildInstructionFile*](/types/2/0280-Software-Development-Assets), [*YAMLFile*](/types/2/0280-Software-Development-Assets), [*PropertiesFile*](/types/2/0280-Software-Development-Assets), and [*ArchiveFile*](/types/2/0226-Archive-Files).  There is also a new relationship called [*ArchiveFileContents*](/types/2/0226-Archive-Files) to identify the contents of an archive file.
     * There are new attributes called *isCaseSensitive* and *category* for [*ValidValueDefinition*](/types/5/0545-Reference-Data) that provides additional information used to match valid values. In addition, there are two new types of valid value relationship: *ValidValueAssociation* and *ConsistentValidValues*.
     * The [*ConnectorType*](/types/2/0201-Connectors-and-Connections) entity has a new attribute called *deployedImplementationType* to allow a connector writer to record the [deployed implementation type](/concepts/deployed-implementation-type) that the connector works with.
-    * The [*Template*](/types/0/0011-Managing-Referenceables) classification has a new property called *versionIdentifier*.  This model also includes a new relationship called *CatalogTemplate* to identify a template for a particular type of technology.
+    * The [*Template*](/types/0/0011-Templates) classification has a new property called *versionIdentifier*.  This model also includes a new relationship called *CatalogTemplate* to identify a template for a particular type of technology.
     * The [*CatalogTarget*](/types/4/0464-Dynamic-Integration-Groups) relationship has two new properties: *configurationProperties* and *metadataSourceQualifiedName*.
     * The [*Topic*](/types/2/0223-Events-and-Logs) entity how has a *topicName* attribute.
     * [*ConsistentValidValue*](/types/5/0545-Reference-Data) is a new relationship that links valid values that represent different properties, and are typically seen together in the same data item.
