--- a/site/snippets/release-notes/6-0.md
+++ b/site/snippets/release-notes/6-0.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-## Release 6.0 (January 2026)
+## Release 6.0 (March 2026)
 
 _**These are DRAFT release notes.  The notes will be updated until & when 6.0 is released**_
 
@@ -17,7 +17,7 @@ _**These are DRAFT release notes.  The notes will be updated until & when 6.0 is
 ??? functional "Classification History and LatestChange classification"
     The open metadata repositories have a new operation to return the history (versions) for an entity's classification.  The operation takes the entity's GUID and the name of the classification of interest.
 
-    In recognition of this new capability, *LatestChange* classifications are now added to the following types of elements: [Actor](/types/1/0110-Actors), [Asset](/types/0/0010-Base-Model), [Collection](/types/0/0021-Collections), [Community](/types/1/0140-Communities), [DesignModelElement](/types/5/0565-Design-Models), [GlossaryTerm](/types/3/0330-Terms), [GovernanceDefinition](/types/4/0401-Governance-Definitions), and [Project](/types/1/0130-Projects), each time an anchored element is changed.
+    In recognition of this new capability, *LatestChange* classifications are no longer used and the classification has been removed from the type system.
 
 ??? functional "New View Service: Governance Officer OMVS"
     [Governance Officer OMVS](/services/omvs/governance-officer/overview) supports the maintenance of the metadata for a governance domain.
